--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/Theme.ShOAPpingList"
+            android:name=".ShoappingListApplication"
+            android:networkSecurityConfig="@xml/network_security_config"
             tools:targetApi="31">
         <activity
                 android:name=".MainActivity"
@@ -23,5 +25,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
