--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
             android:theme="@style/Theme.ShOAPpingList"
             android:name=".ShoappingListApplication"
             android:networkSecurityConfig="@xml/network_security_config"
+            android:enableOnBackInvokedCallback="true"
             tools:targetApi="31">
         <activity
                 android:name=".MainActivity"
